--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@
 
 .App-header {
   background-color: #222;
-  height: 150px;
   padding: 20px;
   color: white;
 }
@@ -21,4 +20,12 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.menu,
+.menu a,
+.menu a.visited,
+.menu {
+  color: white;
+  margin-right: 6px;
 }
